# vhadmin-ui

./: Cargo.toml  README.md  index.html  test.json
src/: main.go  main.rs
