[package]
name = "vhadmin"
version = "0.1.0"
authors = ["Zach Bullough <zach@ordermygear.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18.0"
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0.45"
web-sys = "0.3.55"